--- a/index.html
+++ b/index.html
@@ -6,11 +6,37 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Vue Slider</title>
     <link rel="stylesheet" href="css/style.css">
-    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-Zenh87qX5JnK2Jl0vWa8Ck2rdkQ2Bzep5IDxbcnCeuOxjzrPF/et3URy9Bv1WTRi" crossorigin="anonymous">
     <script src="https://cdn.jsdelivr.net/npm/vue@2/dist/vue.js"defer></script>
-    <script src="js/script.js"></script>
+    <script src="js/script.js" defer></script>
 </head>
 <body>
-    
+    <div id="app">
+        <div class="slider">
+            <div class="slider-img" v-for="(item, i) in arrImages" :key="item.title" 
+            :style ="background-image: url('image')">
+                <div class="block">
+                    <h2></h2>
+                    <p></p>
+                </div>
+            </div>
+        </div>
+        <div class="thumbnail">
+            <div class="thumbnail-img-container" v-for ="(item, i) in arrImages" :key="item.title">
+                <img  src="arrImages.image" alt="">
+            </div>
+            <div class="controls">
+                <button class="btn-up">
+                    <i class="fa-solid fa-chevron-up"></i>
+                </button>
+                <button class="btn-down">
+                    <i class="fa-solid fa-chevron-down"></i>
+                </button>
+            </div>
+        </div>
+        <div class="buttons">
+            <button class="start">START</button>
+            <button class="invert">INVERT</button>
+        </div>
+    </div>
 </body>
 </html>
