--- a/index.html
+++ b/index.html
@@ -1,42 +1,54 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-    <meta charset="UTF-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Vue Slider</title>
-    <link rel="stylesheet" href="css/style.css">
-    <script src="https://cdn.jsdelivr.net/npm/vue@2/dist/vue.js"defer></script>
-    <script src="js/script.js" defer></script>
+	<meta charset="UTF-8">
+	<meta http-equiv="X-UA-Compatible" content="IE=edge">
+	<meta name="viewport" content="width=device-width, initial-scale=1.0">
+	<title>Live coding</title>
+
+	<link rel="stylesheet" href="css/style.css">
+
+	<script src="https://cdn.jsdelivr.net/npm/vue@2.7.13/dist/vue.js" defer></script>
+	<script src="js/script.js" defer></script>
 </head>
 <body>
-    <div id="app">
-        <div class="slider">
-            <div class="slider-img" v-for="(item, i) in arrImages" :key="item.title" 
-            :style="{ 'background-image': 'url(img/' + item.image + ')'}">
-                <div class="block">
-                    <h2>{{ arrImages.title }}</h2>
-                    <p>{{ arrImages.text }}</p>
-                </div>
-            </div>
-        </div>
-        <div class="thumbnail">
-            <div class="thumbnail-img-container" v-for ="(item, i) in arrImages" :key="item.title">
-                <img  src="img/' + item.image +" alt="">
-            </div>
-            <div class="controls">
-                <button class="btn-up">
-                    <i class="fa-solid fa-chevron-up"></i>
-                </button>
-                <button class="btn-down">
-                    <i class="fa-solid fa-chevron-down"></i>
-                </button>
-            </div>
-        </div>
-        <div class="buttons">
-            <button class="start">START</button>
-            <button class="invert">INVERT</button>
-        </div>
-    </div>
+	<div class="background">
+		<div class="container">
+			<div class="contents">
+				<div class="slider" @mouseenter="pauseAutoplay" @mouseleave="resumeAutoplay">
+					<div class="slider-viewer">
+						<div class="controls">
+							<button class="btn-left" @click="changeSlide(-1)">&lt;</button>
+							<button class="btn-right" @click="changeSlide(1)">&gt;</button>
+						</div>
+
+						<div v-for="(objSlide, i) in arrImages" :key="objSlide.image" class="slide" :class="i === activeIndex ? 'active' : ''">
+							<img :src="'img/' + objSlide.image" :alt="objSlide.title">
+							<div class="text">
+								<h2>{{ objSlide.title }}</h2>
+								<p>{{ objSlide.text }}</p>
+							</div>
+						</div>
+					</div>
+
+					<div class="thumbs">
+						<img
+							v-for="(objSlide, i) in arrImages"
+							:key="objSlide.image"
+							:src="'img/' + objSlide.image"
+							class="thumb-img"
+							:class="{active: i === activeIndex}"
+							@click="setActiveIndex(i)"
+						>
+					</div>
+				</div>
+				<div class="buttons">
+					<button class="btn-start-stop" @click="controlAutoplay">{{ isAutoplayActive ? 'STOP' : 'START' }}</button>
+					<button class="btn-invert" @click="invertAutoplay">INVERT</button>
+				</div>
+			</div>
+		</div>
+	</div>
+
 </body>
 </html>
