--- a/index.html
+++ b/index.html
@@ -7,6 +7,7 @@
 	<title>Live coding</title>
 
 	<link rel="stylesheet" href="css/style.css">
+	<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.2.1/css/all.min.css" integrity="sha512-MV7K8+y+gLIBoVD59lQIYicR65iaqukzvf/nwasF0nqhPay5w/9lJmVM2hMDcnK1OnMGCdVK+iQrJ7lzPJQd1w==" crossorigin="anonymous" referrerpolicy="no-referrer" />
 
 	<script src="https://cdn.jsdelivr.net/npm/vue@2.7.13/dist/vue.js" defer></script>
 	<script src="js/script.js" defer></script>
@@ -18,8 +19,8 @@
 				<div class="slider" @mouseenter="pauseAutoplay" @mouseleave="resumeAutoplay">
 					<div class="slider-viewer">
 						<div class="controls">
-							<button class="btn-left" @click="changeSlide(-1)">&lt;</button>
-							<button class="btn-right" @click="changeSlide(1)">&gt;</button>
+							<button class="btn-left" @click="changeSlide(-1)"><i class="left fa-solid fa-chevron-left"></i></button>
+							<button class="btn-right" @click="changeSlide(1)"><i class="right fa-solid fa-chevron-right"></i></button>
 						</div>
 
 						<div v-for="(objSlide, i) in arrImages" :key="objSlide.image" class="slide" :class="i === activeIndex ? 'active' : ''">
